--- a/CardioHealth/TasksAndSteps/APHFitnessTest/Intro/APHImportantDetailsTableViewController.storyboard
+++ b/CardioHealth/TasksAndSteps/APHFitnessTest/Intro/APHImportantDetailsTableViewController.storyboard
@@ -10,7 +10,7 @@
         <scene sceneID="HUy-fj-Ljr">
             <objects>
                 <tableViewController id="ADt-lG-Uqh" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="singleLineEtched" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="AkX-Cz-HT8">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="AkX-Cz-HT8">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="1300"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
