[APPLE-294] Removed Cell highlighted state

--- a/CardioHealth/TabBarControllers/Profile/APHProfile.storyboard
+++ b/CardioHealth/TabBarControllers/Profile/APHProfile.storyboard
@@ -582,7 +582,7 @@
                                     <color key="backgroundColor" red="0.97254901959999995" green="0.97254901959999995" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
                                 </view>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="gray" indentationWidth="10" reuseIdentifier="APCCheckTableViewCell" rowHeight="65" id="WbH-lp-T09" customClass="APCCheckTableViewCell">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="APCCheckTableViewCell" rowHeight="65" id="WbH-lp-T09" customClass="APCCheckTableViewCell">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="WbH-lp-T09" id="qRi-v7-Web">
